// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMenuExpandedComponent matches snapshot when isCDO is false 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={true}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search="?type=all"
      title="Glossary Editor"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="comments-o"
      link="/profile/inbox/"
      search=""
      title="Inbox"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="globe"
      link="/profile/notifications/"
      search=""
      title="Notifications"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="users"
      link="/profile/contacts/"
      search=""
      title="Contacts"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="file-text"
      link="/profile/documents/"
      search=""
      title="Documents"
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuExpandedComponent matches snapshot when isCDO is true 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={false}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search="?type=all"
      title="Glossary Editor"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="comments-o"
      link="/profile/inbox/"
      search=""
      title="Inbox"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="globe"
      link="/profile/notifications/"
      search=""
      title="Notifications"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="users"
      link="/profile/contacts/"
      search=""
      title="Contacts"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="file-text"
      link="/profile/documents/"
      search=""
      title="Documents"
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuExpandedComponent matches snapshot when isGlossaryEditor is false 1`] = `
<div
  className="usa-grid-full profile-menu"
>
  <div
    className="menu-title"
  >
    <div
      className="menu-title-text"
    >
      Menu
    </div>
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Collapse menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      expandedSection={
        Object {
          "display": false,
          "title": "",
        }
      }
      hidden={false}
      iconName="user"
      search=""
      title="Profile"
      toggleMenuSection={[Function]}
    >
      <withRouter(NavLink)
        hidden={false}
        link="/profile/dashboard"
        search=""
        title="Dashboard"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/favorites/"
        search=""
        title="Favorites"
      />
      <withRouter(NavLink)
        hidden={false}
        link="/profile/searches/"
        search=""
        title="Saved Searches"
      />
    </withRouter(NavLink)>
    <withRouter(NavLink)
      hidden={false}
      iconName="pie-chart"
      link="/profile/statistics"
      search=""
      title="Statistics"
    />
    <withRouter(NavLink)
      hidden={true}
      iconName="book"
      link="/profile/glossaryeditor/"
      search="?type=all"
      title="Glossary Editor"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="comments-o"
      link="/profile/inbox/"
      search=""
      title="Inbox"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="globe"
      link="/profile/notifications/"
      search=""
      title="Notifications"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="users"
      link="/profile/contacts/"
      search=""
      title="Contacts"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="file-text"
      link="/profile/documents/"
      search=""
      title="Documents"
    />
  </NavLinksContainer>
</div>
`;
